Chaned the script to staging bot

--- a/allday/store-manager.html
+++ b/allday/store-manager.html
@@ -2,11 +2,11 @@
 <html>
 
 <head>
-    <title>Allday</title>
+    <title>Allday SM</title>
     <meta charset="utf-8" />
     <script src="/pwa/install"></script>
     <link rel="manifest"
-        href="https://app.yellowmessenger.com/pwa/manifest.json?bot=x1600399734057&name=Allday&icon=https://cdn.yellowmessenger.com/fx67MNRW8Irs1603794299864.png" />
+        href="https://app.yellowmessenger.com/pwa/manifest.json?bot=x1604411772352&name=Allday&icon=https://cdn.yellowmessenger.com/fx67MNRW8Irs1603794299864.png" />
     <link rel="icon" type="image/png" href="https://cdn.yellowmessenger.com/fx67MNRW8Irs1603794299864.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
     <meta name="mobile-web-app-capable" content="yes" />
@@ -59,7 +59,7 @@
     <script src="https://www.gstatic.com/firebasejs/6.5.0/firebase-messaging.js"></script>
     <script type="text/javascript">
         window.ymConfig = {
-            bot: "x1600399734057",
+            bot: "x1604411772352",
             pwa: true,
             fullScreen: "true",
             linkType: "live",
@@ -96,7 +96,7 @@
             if ("serviceWorker" in window.navigator) {
                 window.navigator.serviceWorker
                     .register("https://app.yellowmessenger.com/pwa/service-worker", {
-                        scope: "/pwa/live/x1600399734057",
+                        scope: "/pwa/live/x1604411772352",
                     })
                     .then(function (reg) {
                         console.log("Service worker registered.", reg);
